--- a/icons.qrc
+++ b/icons.qrc
@@ -1,5 +1,9 @@
 <RCC>
   <qresource prefix="icons">
+    <file>photo.jpg</file>
+    <file>photo_round1.jpg</file>
+    <file>photo_64x64.jpg</file>
+    <file>photo_2024-02-11_10-36-30.jpg</file>
     <file>feather/activity.svg</file>
     <file>feather/airplay.svg</file>
     <file>feather/alert-circle.svg</file>
